# dehydrator-rs

./: .gitmodules  Cargo.toml  README.md  build.rs  partitions.csv
src/: acs712.rs  ir.rs  json.rs  linearly_calibrated.rs  main.rs  meas.rs  nvs.rs  on_both.rs  secrets.rs  stepper.rs  wifi.rs
www/: app.js  app.ts  index.html  package.json
