[package]
name = "dehydrator"
version = "0.1.0"
authors = ["Adam Vogt <vogt.adam@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
 
anyhow = "1"
embedded-svc = { version = "0", features = [ "std", "alloc" ] }
embedded-hal = "0"

esp-idf-hal = { version = "0.40.1", features = [ ] }
esp-idf-svc = { version = "0.45.0", features = [
    "std",
    "nightly",
    "experimental",
    "alloc"
]}

# needs a newer embedded-svc
sht31 = "0.1.1"
log = "0.4.17"
shared-bus = "0.2.5"
q_compress = "0.11.6"
hx711_spi = "0.5.0"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
ciborium = "0.2.0"
ciborium-io = "0.2.0"
# serde_json = "1.0.96"
 


[build-dependencies]
embuild = "0.31.1"

[patch.crates-io]
esp-idf-sys = { version ="0.32.1", git = "https://github.com/esp-rs/esp-idf-sys" }
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc" }
# embedded-hal = { git = "https://github.com/rust-embedded/embedded-hal" }
embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }
sht31 = { path = "./vendor/SHT31-rs" }
embedded-io = { path = "./vendor/embedded-io" }


